	Updated the README, which was far far out of date
	Added documentation on SimpleEvaluator's clone-problem parameter and on
		SimpleBreeder's clone-pipeline-and-population parameter
	Simplification of ADFContext.  No longer prebuilds arguments and no longer
		uses GPData except at runtime.
	GPData is now no longer abstract, for those problems which define no data
		at all to transfer between GPNodes (like Artificial Ant)
	Accordingly, ec/app/ant/AntData.java is deleted
	Previously the GPProblem held a GPData object called "data", which was cloned
		to be used by the ADF system.  But at the same time various GPProblem
		subclasses in applications also created a GPData object, called "input",
		which was of exactly the same class.  This stupidity is a bit dangerous.
		Since the "input" convention is so widespread, we have merged these two
		by calling the GPData instance "input".  Accordingly, the various demo
		applications have been modified (in their setup and evaluate and
		describe methods) to verify that "input" is of the right class and to
		cast it into the proper class at evaluation time.
	ADFContext parameters now officially deleted.  They'd been long deprecated.
	Updated MersenneTwister and MersenneTwisterFast
	MultiobjectiveFitness now specifies objective maximization on a per-objective
		basis rather than for all objectives.  Accordingly, the maximize variable
		has been changed to an array, and the isMaximizing() function has been
		deprecated and replaced with an isMaximizing(objective) function.  A new
		parameter has ben added to allow maximization on a per-objective basis.
		The maximization variable is now shared among all instances from the same
		prototype just like the minimum and maximum variables are.  This doesn't
		effect either NSGA2 or SPEA2.
	Bug fix in VectorSpecies to bug introduced when simulate binary crossover was 
		added: uniform crossover always has zero probability.  Thanks to
		Peter Lanze <pl@INDAL.DE>.